# Easy-Leetcode

./: .gitignore  AGENT.md  CHECKLIST.md  Cargo.toml  README.md  README_zh.md  test_diag.rs  theme.toml
data/: problems.json
data/traces/: 1.json  104.json  105.json  114.json  121.json  141.json  146.json  152.json  155.json  160.json  19.json  2.json  20.json  200.json  206.json  208.json  21.json  23.json  24.json  25.json  295.json  42.json  53.json  62.json  76.json  79.json  94.json  98.json
src/: cli.rs  config.rs  highlight.rs  lib.rs  main.rs  theme.rs  trace.rs
src/instrument/: analyzer.rs  compiler.rs  example.rs  generator.rs  mod.rs  trace_parser.rs
src/tui/: events.rs  mod.rs  state.rs  ui.rs
tests/: cli_smoke.rs
