[package]
name = "leetcode-helper"
version = "0.1.0"
edition = "2024"
description = "CLI helper for LeetCode problem notes"

[[bin]]
name = "lh"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
toml = "0.8"
winapi = { version = "0.3", features = ["consoleapi", "wincon", "processenv", "winbase"] }
ratatui = "0.30.2"
crossterm = "0.29.0"
