[package]
name = "leetcode-helper"
version = "0.1.0"
edition = "2024"
description = "Local-first LeetCode companion — auto-instrument Java solutions into interactive step-through visualizations with data structure diffing, all in your terminal"

[[bin]]
name = "lh"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
toml = "0.8"
ratatui = "0.30.2"
crossterm = "0.29.0"
anyhow = "1"
